--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,11 +6,6 @@
 @theme inline {
     --color-background: var(--background);
     --color-foreground: var(--foreground);
-
-    --color-main_color: #184377;
-    --color-main_color_alt: #103561;
-    --color-second_color: #ff4c28;
-    --color-second_color_alt: #88220f;
     --color-sidebar-ring: var(--sidebar-ring);
     --color-sidebar-border: var(--sidebar-border);
     --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -49,6 +44,21 @@
             0px 2px 3px -1px rgba(0, 0, 0, 0.1),
             0px 1px 0px 0px rgba(25, 28, 33, 0.02),
             0px 0px 0px 1px rgba(25, 28, 33, 0.08);
+
+    --color-main_color: #184377;
+    --color-main_color_alt: #103561;
+    --color-second_color: #ff4c28;
+    --color-second_color_alt: #88220f;
+    --animate-fade-out: fadeOut 3s linear infinite;
+    @keyframes fadeOut {
+        0%,10%,
+        90%,100% {
+            opacity: 1;
+        }
+        50% {
+            opacity: 0.2;
+        }
+    }
 }
 
 @layer components {
